[ML] Switch to using euiTextTruncate to fix overflow

--- a/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
+++ b/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
@@ -112,9 +112,7 @@
         flex-basis: 15%;
         font-size: inherit;
         line-height: 1.5rem;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
+        @include euiTextTruncate;
       }
 
       .euiDescriptionList__description {
